--- a/Student Project Repository/views/home.ejs
+++ b/Student Project Repository/views/home.ejs
@@ -3,6 +3,7 @@
 <head>
     <title>Home Page</title> 
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="stylesheets/movement.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/template.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/landing.css">    
 </head>
@@ -18,9 +19,9 @@
                 style="fill:none;stroke:black;stroke-width:3" />
               </svg>
     <form class="" action="index.html" method="post">
-        <a href="http://link" id="btn1"><img src="images/svg/addproj.svg"></a>
-        <a href="http://link" id="btn2"><img src="images/svg/searchproj.svg"></a>
-        <a href="http://link" id="btn3"><img src="images/svg/myproj.svg"></a>
+        <a href="http://link" class="moveing" id="btn1"><img src="images/svg/addproj.svg"></a>
+        <a href="http://link" class="moveing" id="btn2"><img src="images/svg/searchproj.svg"></a>
+        <a href="http://link" class="moveing" id="btn3"><img src="images/svg/myproj.svg"></a>
     </form>
 </div>
 </body>
