--- a/Student Project Repository/public/stylesheets/template.css
+++ b/Student Project Repository/public/stylesheets/template.css
@@ -28,6 +28,7 @@
     font-size: 20px;
     box-shadow: 0px 3px 800px 0px #a239ca;
     color: #e7dfdd;
+    line-height: 1.0;
   }
 
   /* _____________________Footer Styles_____________________*/
@@ -84,3 +85,6 @@
     background-color: #0e0b16;
     color: #e7dfdd;
   } */
+
+
+  
