add project styling.

--- a/Student Project Repository/views/addProj_Test.ejs
+++ b/Student Project Repository/views/addProj_Test.ejs
@@ -1,5 +1,24 @@
-<html>
-    <head>
-        <TItle>TEST</TItle>        
-    </head>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+    <title>Add Project</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/template.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/main.css">
+
+</head>
+
+<body>
+        <div class="header">
+                <span style="color: #4717f6; font-weight: bold;">ADD</span> <br>PROJECT 
+              </div>
+</body>
+<!-- <footer>
+    <span class="year">©2019</span><span class="amrita">AMRITA VISHWA VIDYAPEETHAM</span>
+    <a href="https://www.amrita.edu"><img class="logo" src="/images/logo.png"></a>
+    <span class="contact">For any queries,<br><a href="mailto:chejerlasirish@gmail.com"><span
+                class="email">@chejerlasirish@gmail.com</span></span>
+</footer> -->
+
 </html>
