--- a/Student Project Repository/views/searchproj.ejs
+++ b/Student Project Repository/views/searchproj.ejs
@@ -1,1 +1,47 @@
-<h1><%= title + " page ~ Yet to be done " %></h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+    <title>Search Project</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/template.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/main.css">
+    <style>
+        .headline{
+            padding-left: 15px;  
+        }
+        .header{
+            display: inline-flex;
+        }
+        body{
+            padding: 90px 75px;
+        }
+        .search{
+            width: 100%;
+            display: inline-flex;
+        }
+        img{
+            border-width: 1px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="header">
+        <a href="/home"><img  src="../images/svg/back.svg"></a>
+        <div class ="headline" id="slider">
+        <span><span style="color: #4717f6; font-weight: bold;">SEARCH</span><br>PROJECT</span>        
+        </div>
+    </div>
+    <div class="search">
+    <img src="../images/svg/searchbtn.svg">
+    <input type="text" placeholder="Search">
+    </div>
+</body>
+<!-- <footer>
+    <span class="year">©2019</span><span class="amrita">AMRITA VISHWA VIDYAPEETHAM</span>
+    <a href="https://www.amrita.edu"><img class="logo" src="/images/logo.png"></a>
+    <span class="contact">For any queries,<br><a href="mailto:chejerlasirish@gmail.com"><span
+                class="email">@chejerlasirish@gmail.com</span></span>
+</footer> -->
+
+</html>
