--- a/Student Project Repository/views/searchproj.ejs
+++ b/Student Project Repository/views/searchproj.ejs
@@ -5,6 +5,19 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../stylesheets/template.css">
     <link rel="stylesheet" type="text/css" href="../stylesheets/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <style>
         .headline{
             padding-left: 15px;  
@@ -22,6 +35,20 @@
         img{
             border-width: 1px;
         }
+        #window{
+            overflow-y: scroll;
+            position: absolute;
+            width: 90%;
+            height:80%;
+            padding: 12px 20px;
+            border-width: 1px;
+            border-style: solid;
+            border-color: gray;
+            border-radius: 4px;
+        }
+        .projBlock {
+            width: 100%;
+        }
     </style>
 </head>
 
@@ -35,6 +62,55 @@
     <div class="search">
     <img src="../images/svg/searchbtn.svg">
     <input type="text" placeholder="Search">
+    </div>
+
+    <div id="window">
+        <div class="projBlock">
+            <div class ="inner" id = "left">
+                    <div class="row panel-content">
+                            <div class="col-12 ">
+                                <% var i;
+                                for (i = 0; i<9; i++) { %>
+                                        <div class="row eachproj-content projinfo">
+                                        <div class="col-8 ">
+                                            <h5>
+                                                RNN for Chatbots<br>
+                                                <small class="text-muted muted-content">Deep Learning</small>
+                                                <br>
+                                                <h5>
+                                                    <!-- <span style="font-size: 15px">Hardware Specification : </span><small
+                                                        class="text-muted muted-content">~NIL~</small>
+                                                    <br>
+                                                    <span style="font-size: 15px">Software Specification : </span><small
+                                                        class="text-muted muted-content">Python, TensorFlow</small>
+                                                    <br> -->
+                                                    <span style="font-size: 15px">By : </span><small class="text-muted muted-content">Sirish<span
+                                                            class="style-dot"> • </span>
+                                                        RaviBalg<span class="style-dot"> • </span>Vigneswar<span class="style-dot"> •
+                                                        </span>Gokul</small>
+                                                    <br>
+                                                </h5>
+                                            </h5>
+                                        </div>
+                                        <div class="col- plagpercent">
+                                                <span style="font-size: 13px">View Abstract</span>
+                                                <div>
+                                                     <a href="/"><img style="padding-left: 20px;" src="../images/svg/file.svg"></a>
+                                                      </div>
+                                        </div>
+                                    </div>
+                                    <hr style="border-color: #4717f6;border-width: 1.5px">
+                                <% } %>
+                                
+                            </div>
+                
+                        </div>
+
+            </div>
+            <div class ="inner" id ="right">
+                
+            </div>
+        </div>
     </div>
 </body>
 <!-- <footer>
