Turned everything to Jetbrains IntelliJ

--- a/Student Project Repository/views/addProj.ejs
+++ b/Student Project Repository/views/addProj.ejs
@@ -27,6 +27,7 @@
         <div class="container">
             <h2><span id="title" style="color: #4717f6; font-weight: bold;">Project</span> Details</h2>
             <hr class="line">
+            <!-- Bootstrap Forms -->
             <form action="" method="POST">
                 <!-- Title Textbox -->
                 <div class="form-group">
