--- a/Student Project Repository/views/home.ejs
+++ b/Student Project Repository/views/home.ejs
@@ -57,7 +57,7 @@
     <a href="https://www.amrita.edu"><img class="logo" src="/images/logo.png"></a>
 
     <span class="contact">For any queries,<br><a href="mailto:chejerlasirish@gmail.com"><span
-                class="email">@chejerlasirish@gmail.com</span></span>
+                    class="email">@chejerlasirish@gmail.com</span></a></span>
 </footer>
 
 </html>
