--- a/Student Project Repository/public/stylesheets/main.css
+++ b/Student Project Repository/public/stylesheets/main.css
@@ -76,7 +76,7 @@ hr {
   background-color: white;
   color: black;
   position: fixed;
-  top: 25%;
+    top: 15%;
   left: 62%;
   width: 30%;
   height: 50%;
@@ -90,10 +90,10 @@ hr {
   color: black;
   opacity: 0;
   position: fixed;
-  top: 20%;
+    top: 15%;
   left: 62%;
   width: 30%;
-  height: 66%;
+    height: 69%;
   border-radius: 2%;
   box-shadow: 0px 5px 20px 5px black;
 }
@@ -169,7 +169,7 @@ hr {
   opacity: 1;
   font-size: 15px;
   display: block;
-  color: red;
+    color: #7b7d7f;
   text-align: center;
 
 }
